# flare

./: .env.template  Cargo.toml  README.md
src/: main.rs  router.rs  state.rs
src/flare/: flare.rs  handler.rs  mod.rs  router.rs
src/modules/: mod.rs
src/modules/authentication/: mod.rs
src/modules/authentication/controllers/: core_controller.rs
src/modules/core/: mod.rs
