[package]
name = "flare"
version = "0.0.1"
authors = ["Nikan Dalvand <nikandalvand@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-web = "1.0.0"

futures = "0.1"
env_logger = "0.6"
uuid = { version = "0.7", features = ["v4"] }

r2d2 = "0.8"
r2d2_mysql = "*"
r2d2_postgres = "*"
postgres = "0.16.0-rc.1"
mysql = "16"

dotenv = "0.14.1"